--- a/react-sample-app/package.json
+++ b/react-sample-app/package.json
@@ -3,11 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@react-spring/three": "^9.7.5",
     "@react-three/fiber": "^8.17.14",
     "cra-template": "1.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "three": "^0.173.0",
     "web-vitals": "^4.2.4"
   },
   "scripts": {
